--- a/src/lib/styling/styles.css
+++ b/src/lib/styling/styles.css
@@ -7,7 +7,7 @@
     width: 100%;
     margin: 0 auto;
     background: #fff; /* to change nav background color */
-    padding: 50px 0;
+    padding: 40px 0;
     box-shadow: 0px 2px 0px #ebebeb;
   }
   nav ul {
@@ -19,10 +19,10 @@
   }
   nav ul li a {
     display: block;
-    padding: 15px;
+    padding: 12px;
     text-decoration: none;
     color: rgb(0, 0, 0);
-    font-weight: 800;
+    font-family: 'Inter', sans-serif;
     text-transform: uppercase;
     margin: 0 10px;
   }
@@ -36,7 +36,7 @@
   }
   
   
-  /* SHIFT */
+  /* Hover shift */
   nav.shift ul li a {
     position:relative;
     z-index: 1;
@@ -64,6 +64,6 @@
   nav.shift ul li a:hover:after {
     opacity: 1;
     visibility: visible;
-    height: 100%;
+    height: 80%;
   }
   
