--- a/src/lib/styling/styles.css
+++ b/src/lib/styling/styles.css
@@ -1,69 +1,94 @@
-  .center {
-    text-align: center;
-  }
-  
-  /* NAVIGATION */
-  nav {
-    width: 100%;
-    margin: 0 auto;
-    background: #fff; /* to change nav background color */
-    padding: 40px 0;
-    box-shadow: 0px 2px 0px #ebebeb;
-  }
-  nav ul {
-    list-style: none;
-    text-align: center;
-  }
-  nav ul li {
-    display: inline-block;
-  }
-  nav ul li a {
-    display: block;
-    padding: 12px;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-family: 'Inter', sans-serif;
-    text-transform: uppercase;
-    margin: 0 10px;
-  }
-  nav ul li a,
-  nav ul li a:after,
-  nav ul li a:before {
-    transition: all .5s;
-  }
-  nav ul li a:hover {
-    color: #555;
-  }
-  
-  
-  /* Hover shift */
-  nav.shift ul li a {
-    position:relative;
-    z-index: 1;
-  }
-  nav.shift ul li a:hover {
-    color: #ffffff;
-  }
-  nav.shift ul li a:after {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-    width: 100%;
-    height: 0.5px;
-    content: '.';
-    color: transparent;
-    background: #000000;
-    visibility: none;
-    opacity: 0;
-    z-index: -1;
-  }
-  nav.shift ul li a:hover:after {
-    opacity: 1;
-    visibility: visible;
-    height: 80%;
-  }
-  
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap');
+
+.center {
+	text-align: center;
+}
+
+/* NAVIGATION */
+nav {
+	width: 100%;
+	margin: 0 auto;
+	background: #fff; /* to change nav background color */
+	padding: 40px 0;
+	box-shadow: 0px 2px 0px #ebebeb;
+}
+nav ul {
+	list-style: none;
+	text-align: center;
+}
+nav ul li {
+	display: inline-block;
+}
+nav ul li a {
+	display: block;
+	padding: 12px;
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+	font-family: 'Inter', sans-serif;
+	text-transform: uppercase;
+	margin: 0 10px;
+}
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+	transition: all 0.5s;
+}
+nav ul li a:hover {
+	color: #555;
+}
+
+/* Hover shift */
+nav.shift ul li a {
+	position: relative;
+	z-index: 1;
+}
+nav.shift ul li a:hover {
+	color: #ffffff;
+}
+nav.shift ul li a:after {
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+	width: 100%;
+	height: 0.5px;
+	content: '.';
+	color: transparent;
+	background: #000000;
+	visibility: none;
+	opacity: 0;
+	z-index: -1;
+}
+nav.shift ul li a:hover:after {
+	opacity: 1;
+	visibility: visible;
+	height: 80%;
+}
+
+/* Titles */
+.title {
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+}
+
+.subtitle {
+	font-family: 'Inter', sans-serif;
+	font-weight: 300;
+	margin-top: 15px;
+	margin-bottom: 20px;
+}
+
+/* Bio */
+.bio {
+	padding: 10%;
+}
+
+/* Social Media Icons */
+.icon {
+  width: 35px;
+  height: auto;
+  padding: 5px;
+}
