--- a/src/lib/styling/styles.css
+++ b/src/lib/styling/styles.css
@@ -180,10 +180,34 @@ a {
 	background-position-y: bottom;
 }
 
+#avocado {
+	background-image: url('../../public/static/assets/avocadoAdventure.jpg');
+	background-repeat: no-repeat;
+	background-size: 118%;
+	background-position-x: left;
+	background-position-y: bottom;
+}
+
 #rotary {
 	background-image: url('../../public/static/assets/rotary.png');
 	background-repeat: no-repeat;
 	background-size: 100%;
+	background-position-x: center;
+	background-position-y: bottom;
+}
+
+#wolf {
+	background-image: url('../../public/static/assets/wolf.gif');
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position-x: left;
+	background-position-y: bottom;
+}
+
+#candy {
+	background-image: url('../../public/static/assets/candyClouds.jpg');
+	background-repeat: no-repeat;
+	background-size: 119%;
 	background-position-x: center;
 	background-position-y: bottom;
 }
